--- a/templates/app/main.html
+++ b/templates/app/main.html
@@ -48,5 +48,9 @@
             </tr>
         </tbody>
     </table>
+
+    <h2>Forms:</h2>
+        {{form}}
+        <input type="submit" value="Submit">
 </body>
 </html>
