--- a/templates/app2/list.html
+++ b/templates/app2/list.html
@@ -4,22 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Forms</title>
+    <title>Student View</title>
+    <style>
+        table, thead, tbody,tr,td {
+            border:1px solid black;
+        }
+    </style>
 </head>
 <body>
-    <form action="" method='POST'>
-        {% csrf_token %}
-        {% for field in form %}
-        <p>
-            {{field.label_tag}}
-            {{field}}
-        </p>
-        {% endfor %}
-        <input type="submit" value="Submit">
-    </form>
-    <a href="{% url 'list' %}">Database Table</a>
-
-
     <h1>View of The Database</h1>
     <table>
         <thead>
@@ -39,5 +31,6 @@
             {% endfor %}
         </tbody>
     </table>
+   <a href="{% url 'form' %}">Form Page</a>
 </body>
 </html>
