messages framework added

--- a/templates/app2/mail.html
+++ b/templates/app2/mail.html
@@ -22,7 +22,15 @@
       {% endfor %}
       <input type="submit" value="Submit" />
     </form>
-
+    <br>
+    <br>
+    <hr>
+    {% if messages %}
+      {% for message in messages %}
+        {% if message.tags %}{{message.tags}}{% endif %}
+        {{message}}
+      {% endfor %}
+    {% endif %}
     <h1>View of The Database</h1>
     <table>
       <thead>
