--- a/templates/app2/signup.html
+++ b/templates/app2/signup.html
@@ -30,5 +30,9 @@
             </small>
         {% endfor %}
     {% endif %}
+
+    <br>
+    <br>
+    <a href="{%url 'login'%} ">Login</a>
 </body>
 </html>
